--- a/styles/global.css
+++ b/styles/global.css
@@ -148,3 +148,15 @@ h6 {
 .bottom_space{
   margin-bottom: 50px;
 }
+
+.trythis{
+  padding: 50px 100px;
+  height: 70vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  max-width: 1440px;
+  margin: 0 auto;
+}
