--- a/styles/global.css
+++ b/styles/global.css
@@ -6,6 +6,18 @@ body {
   overflow-x: hidden; 
 }
 
+.container_section{
+  padding: 50px 100px;
+  height: 70vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 p {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
@@ -69,40 +81,7 @@ h6 {
     
 }  
 
-.socials ul {
-  display: flex;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
 
-.socials ul li {
-  list-style: none;
-}
-
-.socials ul li a {
-  width: 80px;
-  height: 80px;
-  background-color: #fff;
-  text-align: center;
-  line-height: 80px;
-  font-size: 35px;
-  margin: 0 10px;
-  display: block;
-  border-radius: 50%;
-  position: relative;
-  overflow: hidden;
-  border: 3px solid #fff;
-  z-index: 1;
-}
-
-.socials ul li a .icon {
-  position: relative;
-  color: #262626;
-  transition: .5s;
-  z-index: 3;
-}
 
 
 
@@ -149,14 +128,3 @@ h6 {
   margin-bottom: 50px;
 }
 
-.trythis{
-  padding: 50px 100px;
-  height: 70vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  max-width: 1440px;
-  margin: 0 auto;
-}
