Added height value to mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -88,6 +88,7 @@ h6 {
 @media (max-width: 830px) {
       .container_section {
         padding: 0px 0px;
+        height: 70vh;
         display: inline-block;
         margin: 15px;
 }
