--- a/styles/global.css
+++ b/styles/global.css
@@ -199,4 +199,68 @@ ul {
   border-radius: .25em;
 }
 
+.project_container{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 100px;
+  width: 100%;
+  
+}
 
+@media only screen and (max-width: 725px){
+.project_container{
+  display: block;
+  margin-top: 35px;
+  margin-bottom: 35px;
+}
+}
+
+.project_title{
+  margin-bottom: 5px;
+}
+
+
+.project_title a{
+  font-weight: 500;
+  font-size: 1.50rem;
+
+}
+
+.stack_button{
+  background-color: #f0a500;
+  border: 1px solid  #000000;;
+  margin-right: 5px;
+  padding: .25em .5em;
+  font-size: .75em;
+  border-radius: .25em;
+  }
+
+.project__pic {
+    max-width: 700px ;
+    overflow: visible;
+    margin: 0;
+    padding: 10px;
+  }
+.project__pic a {
+    display: block;
+  }
+
+.project__pic img {
+    width: 100%;
+    max-width: 100%;
+    vertical-align: bottom;  
+}
+
+.project_links{
+  display: flex;
+    justify-content: space-between;
+    
+}
+
+.project_caption{
+  width: 255px ; 
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  margin-left: 50px;
+}
