--- a/styles/global.css
+++ b/styles/global.css
@@ -255,8 +255,19 @@ ul {
 .project_links{
   display: flex;
     justify-content: space-between;
-    
 }
+
+.project_links .underline_links{
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  text-decoration: none;
+  display: inline-block;
+  padding: 1px 2px;
+  text-decoration: none;
+  -webkit-box-shadow: inset 0 -2px 0 #f0a500;
+  box-shadow: inset 0 -2px 0 #f0a500;
+}
+
 
 .project_caption{
   width: 255px ; 
