--- a/components/Menu/navbar.module.css
+++ b/components/Menu/navbar.module.css
@@ -10,8 +10,15 @@
 }
 
 .logo_left{
-   border: 1px solid black;
+  font-family: 'Noto Serif', serif;
+  font-size: 1.75rem;
+}
 
+@media only screen and (max-width: 725px){
+  .logo_left{
+    font-family: 'Noto Serif', serif;
+    font-size: 1.25rem;
+  }
 }
 
 .div_top_hypers {
@@ -61,9 +68,7 @@
   width: 100%;
   height: 100%;
   z-index: auto;
-  transition: 5s ease-in;
   text-align: center;
-  
   }
 
   
