--- a/styles/global.css
+++ b/styles/global.css
@@ -275,3 +275,9 @@ ul {
   flex-shrink: 0;
   margin-left: 50px;
 }
+
+@media only screen and (max-width: 725px){
+  .project_caption{
+    margin: auto;
+  }
+}
