--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -10,14 +10,14 @@
   flex-direction: column;
   -ms-flex-pack: distribute;
   justify-content: flex-start;
-  align-content: center;
-  max-width: 1100px;
+  align-items: center;
+  max-width: 900px;
   margin: 0 auto;
   }
 
 .blog_container ul{
   padding: 0px 20px;
-  padding-inline-start: 0px;
+  /* padding-inline-start: 0px; */
 }
 
 .headingXl{
